[project]
name = "learning-langchain"
version = "0.0.1"
description = "Code blocks for the book Learning LangChain."
authors = []
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=1.2.6",
    "langchain-openai>=1.3.3",
    "langchain>=1.3.11",
    "python-dotenv>=1.2.2",
    "langchain-community>=0.4.2",
    "langchain-postgres>=0.0.17",
    "langchain-chroma>=1.1.0",
    "beautifulsoup4>=4.15.0",
    "pypdf>=6.14.2",
    "psycopg[binary]>=3.3.4",  # Updated to include [binary] extra
    "setuptools>=82.0.1",
    "langsmith>=0.9.1",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "duckduckgo-search>=8.1.1",
    "langgraph-cli>=0.4.30"
]

[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []

[tool.setuptools.package-data]
"*" = ["py.typed"]

